--- a/deploy/compose/config-dir/provisioner/templates/centos-6.ks.tmpl
+++ b/deploy/compose/config-dir/provisioner/templates/centos-6.ks.tmpl
@@ -132,6 +132,7 @@ chmod +x /etc/init.d/rebar_join.sh
 ln -s /etc/init.d/rebar_join.sh /etc/rc3.d/S80rebar
 ln -s /etc/init.d/rebar_join.sh /etc/rc5.d/S80rebar
 ln -s /etc/init.d/rebar_join.sh /etc/rc2.d/S80rebar
+echo 'LINKDELAY=60' >> /etc/sysconfig/network
 
 # boot to runlevel 3 by default
 sed -i -e '/initdefault/ s/5/3/' /etc/inittab
