Save the Rebar endpoint so that we can use it later as roles need it.

--- a/deploy/compose/config-dir/provisioner/templates/rebar-join.sh.tmpl
+++ b/deploy/compose/config-dir/provisioner/templates/rebar-join.sh.tmpl
@@ -51,7 +51,7 @@ fi
     chmod 755 rebar
 )
 export REBAR_ENDPOINT="{{.CommandURL}}"
-
+echo "{{.CommandURL}}" > /etc/rebar.endpoint
 
 put_alive() {
     echo "Setting node alive=$1"
